--- a/MotorPHPortalGUI/nbproject/project.properties
+++ b/MotorPHPortalGUI/nbproject/project.properties
@@ -43,7 +43,8 @@ jar.compress=false
 javac.classpath=\
     ${file.reference.commons-csv-1.14.0.jar}:\
     ${file.reference.commons-io-2.19.0.jar}:\
-    ${file.reference.commons-codec-1.15.jar}
+    ${file.reference.commons-codec-1.15.jar}:\
+    ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=\ --enable-preview
 javac.deprecation=false
